# research-center-assignment

./: .dockerignore  .env  .gitignore  Dockerfile  EDA_and_Model.ipynb  README.md  baseline_app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  research_centers.csv  sample.py
__MACOSX/: ._README.md  ._research_centers.csv
app/: main.py
app/api/routes/: health.py  predict.py  train.py
app/core/: config.py  logging.py
app/mlflow_utils/: tracker.py
app/pipeline/: data_loader.py  data_validator.py  evaluator.py  preprocessor.py  trainer.py
app/schemas/: input.py  output.py
data/: research_centers_clustered.csv
